--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.0.1",
+    "@tensorflow/tfjs-node": "^3.19.0",
     "express": "^4.18.2",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
